--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -38,6 +38,16 @@
     "### Conclusion final\n",
     "- [ ] Reporte de reflexiones"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pruebas 4/10\n",
+    "-\n",
+    "-\n",
+    "-"
+   ]
   }
  ],
  "metadata": {
