Unidades de la materia

--- a/Unidad 6.ipynb
+++ b/Unidad 6.ipynb
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACCURACY:  0.6213808463251661\n"
+      "ACCURACY:  0.6169265033407564\n"
      ]
     }
    ],
@@ -269,7 +269,8 @@
     "# Construir una red neuronal con pesos y sesgos\n",
     "# iniciados aleatoriamente\n",
     "# Matriz de pesos para la capa oculta, con valores aleatorios entre 0 y 1, de 3x3\n",
-    "# Esto quiere decir que hay 3 neuronas en la capa oculta, y cada neurona esta conectada a 3 entradas (valores R, G y B en este caso)\n",
+    "# Esto quiere decir que hay 3 neuronas en la capa oculta, y cada neurona esta \n",
+    "# conectada a 3 entradas (valores R, G y B en este caso)\n",
     "w_hidden = np.random.rand(3, 3)\n",
     "# Idem anterior, pero es 1 neurona, con 3 entradas (de la capa oculta anterior)\n",
     "w_output = np.random.rand(1, 3)\n",
@@ -290,7 +291,8 @@
     "    Z1 = w_hidden @ X + b_hidden\n",
     "    # Activacion ReLU, convirtiendo los valores calculados en 0 si son negativos, o manteniendolos si son positivos\n",
     "    A1 = relu(Z1)\n",
-    "    # Multiplicacion matricial entre los pesos de salida y las activaciones de la capa oculta, mas el sesgo\n",
+    "    # Multiplicacion matricial entre los pesos de salida y las activaciones de la capa oculta, \n",
+    "    # mas el sesgo\n",
     "    Z2 = w_output @ A1 + b_output\n",
     "    # Activacion logistica, convirtiendo los valores calculados en valores entre 0 y 1\n",
     "    A2 = logistic(Z2)\n",
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -343,11 +345,11 @@
      "output_type": "stream",
      "text": [
       "w_hidden = \n",
-      " [[0.75869336 0.76771849 0.88980149]\n",
-      " [0.95596561 0.94576103 0.39610869]\n",
-      " [0.71706957 0.52232476 0.2022146 ]]\n",
+      " [[0.49355583 0.68330433 0.23729273]\n",
+      " [0.94719892 0.02990019 0.36193425]\n",
+      " [0.15381736 0.80130646 0.62326059]]\n",
       "w_output = \n",
-      " [[0.41798431 0.37745063 0.84341687]]\n"
+      " [[0.15055134 0.7264955  0.29780998]]\n"
      ]
     }
    ],
@@ -1244,7 +1246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
