--- a/Unidades/Unidad 6.ipynb
+++ b/Unidades/Unidad 6.ipynb
@@ -233,14 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACCURACY:  0.6280623608017807\n"
+      "2688\n",
+      "1347\n",
+      "ACCURACY:  0.623608017817371\n"
      ]
     }
    ],
@@ -261,7 +263,8 @@
     "# preguntar\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(all_inputs, all_outputs,\n",
     "    test_size=1/3)\n",
-    "\n",
+    "# print(X_train.size)\n",
+    "# print(X_train.size)\n",
     "#shape retorna una tupla con las dimensiones de la matriz = (filas, columnas).\n",
     "# por lo que shape[0], nos retorna las filas de la matriz.\n",
     "n = X_train.shape[0] # número de registros de entrenamiento\n",
