JupyterNotebook del Data Set de 'Potabilidad'

--- a/potability_Jupyter.ipynb
+++ b/potability_Jupyter.ipynb
@@ -115,263 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "# from script_funciones import scattered, boxplot, histograms, \\\n",
-    "#     matrix_corr, descarte, limpieza, carga_nans, estandarizacion, grafico_acc, pplot\n",
     "import math\n",
+    "from script_funciones import scattered, boxplot, catplot, histograms, matrix_corr, pplot, \\\n",
+    "    descarte, carga_nans, limpieza, estandarizacion, grafico_acc\n",
     "\n",
     "pd.set_option('display.width', 1000)\n",
     "\n",
-    "df = pd.read_csv('water_potability.csv', sep=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ============================================== SCRIPT DE FUNCIONES ===================================================== #\n",
-    "\n",
-    "# Funcion de descarte\n",
-    "# Asigna a un nuevo dataframe, otro pero con los indices dropeados de las filas que cumplan la condicion pasada\n",
-    "# Ejemplo: Si quiero armar un nuevo dataframe sin las filas donde la potabilidad es 0:\n",
-    "# df_1 = descarte(df, 'Potability', 1) => Esto se guarda todas las filas donde Potabilidad es 1\n",
-    "def descarte(data_frame, columna, dato):\n",
-    "    new_df = data_frame.copy()\n",
-    "    indexes = new_df[new_df[columna] != dato].index\n",
-    "    return new_df.drop(indexes)\n",
-    "\n",
-    "# Cargadora de NaNs\n",
-    "def carga_nans(data_frame, data_ceros, data_unos):\n",
-    "    # Aca por las dudas hago lo mismo, igual se lo voy a asignar al original\n",
-    "    new_df = data_frame.copy()\n",
-    "    columnas = new_df.columns.to_list()\n",
-    "    # Esto devuelve:\n",
-    "    # index = indice de la fila\n",
-    "    # fila = todos los datos de la fila en un [[formato]]\n",
-    "    for index, fila in new_df.iterrows():\n",
-    "        # Y por cada fila del dataframe, itero en las columnas\n",
-    "        for i in range(9):\n",
-    "            # Cuando i = 0 > fila['ph'], cuando i = 1 > fila['Hardness']\n",
-    "            if math.isnan(fila.iloc[i]) and fila.iloc[9] == 0:\n",
-    "                new_df.loc[index, columnas[i]] = data_ceros[columnas[i]].median()\n",
-    "            elif math.isnan(fila.iloc[i]) and fila.iloc[9] == 1:\n",
-    "                new_df.loc[index, columnas[i]] = data_unos[columnas[i]].median()\n",
-    "    return new_df\n",
-    "\n",
-    "# Normalizacion\n",
-    "def normalizacion(data_frame):\n",
-    "    # Se agrego esto, sino se esta modificando el dataframe original, y no quiero eso. Se modifica en todas las funciones\n",
-    "    new_df = data_frame.copy() # <-\n",
-    "    columnas = new_df.columns.to_list()\n",
-    "    new_val = []\n",
-    "    for item in columnas[:-1]:\n",
-    "        max_value = new_df[item].max()\n",
-    "        for value in new_df[item]:   \n",
-    "            new_val.append(value/max_value)\n",
-    "        new_df[item] = new_val\n",
-    "        new_val.clear()\n",
-    "    return new_df\n",
-    "\n",
-    "# Borrador de valores atipicos\n",
-    "def atipicos(valores_columna):\n",
-    "    ordered = sorted(valores_columna)\n",
-    "    n = len(valores_columna)\n",
-    "    Q1 = ordered[n // 4]\n",
-    "    Q2 = (ordered[n // 2 - 1] + ordered[n // 2]) / 2\n",
-    "    Q3 = ordered[3 * n // 4]\n",
-    "    iqr = Q3 - Q1\n",
-    "    # print('Max value: ', Q3 + (1.5 * iqr))\n",
-    "    # print('Min value: ', Q1 - (1.5 * iqr))\n",
-    "    # print('\\n')\n",
-    "    # Entonces lo que quiero hacer es: Primero identificar los atipicos. Despues buscar esos atipicos \n",
-    "    # en el dataframe, y eliminarlos. NO se hace con el indice xq son indices dis-\n",
-    "    # tintos, la columna no esta ordenada, 'ordered' si.\n",
-    "    values = []\n",
-    "    for value in ordered:\n",
-    "        if ((value > Q3 + (1.5 * iqr)) or (value < Q1 - (1.5 * iqr))):\n",
-    "            values.append(value)\n",
-    "    return values, iqr\n",
-    "\n",
-    "def limpieza(data_frame):\n",
-    "    new_df = data_frame.copy()\n",
-    "    columnas = new_df.columns.to_list()\n",
-    "    for item in columnas[:-1]:\n",
-    "        indices = []\n",
-    "        valores_at = atipicos(new_df[item].to_list())[0]\n",
-    "        for value in valores_at:\n",
-    "            # Guarda en la lista los indices de las filas que sean iguales al value\n",
-    "            indices.append(new_df[new_df[item] == value].index[0])\n",
-    "        # Y despues las tira todas a la bosta\n",
-    "        new_df = new_df.drop(indices)\n",
-    "    return new_df\n",
-    "\n",
-    "# Estandarizacion\n",
-    "def estandarizacion(data_frame):\n",
-    "    new_df = data_frame.copy()\n",
-    "    columnas = data_frame.columns.to_list()\n",
-    "    for item in columnas[:-1]:\n",
-    "        # media\n",
-    "        media = new_df[item].mean()\n",
-    "        # desviacion estandar\n",
-    "        desv_std = new_df[item].std()\n",
-    "        # lista para guardar los valores escalados\n",
-    "        valores_esc = []\n",
-    "        for value in new_df[item]:\n",
-    "            # estandariza\n",
-    "            val = ((value - media) / desv_std) \n",
-    "            # guarda\n",
-    "            valores_esc.append(val)\n",
-    "        # mete toda la lista en la columna\n",
-    "        new_df[item] = valores_esc\n",
-    "    \n",
-    "    return new_df\n",
-    "\n",
-    "# Estandarizacion Robusta\n",
-    "# Esto se tiene que llamar una vez que no haya NaNs.\n",
-    "def estandarizacion_robusta(data_frame):\n",
-    "    new_df = data_frame.copy()\n",
-    "    columnas = data_frame.columns.to_list()\n",
-    "    iqr = 0\n",
-    "    for item in columnas[:-1]:\n",
-    "        # media\n",
-    "        iqr = atipicos(new_df[item].to_list())[1]\n",
-    "        # desviacion estandar\n",
-    "        desv_std = new_df[item].std()\n",
-    "        # lista para guardar los valores escalados\n",
-    "        valores_esc = []\n",
-    "        for value in new_df[item]:\n",
-    "            # estandariza\n",
-    "            val = ((value - iqr) / desv_std)\n",
-    "            # guarda\n",
-    "            valores_esc.append(val)\n",
-    "        # mete toda la lista en la columna\n",
-    "        new_df[item] = valores_esc\n",
-    "    \n",
-    "    return new_df\n",
-    "\n",
-    "def borrador_samples(data_frame):\n",
-    "    new_df = data_frame.copy()\n",
-    "    indices = []\n",
-    "    for index,value in new_df.iterrows():\n",
-    "        if new_df['fraud'][index] == 0:\n",
-    "            indices.append(index)\n",
-    "        if (index == 820_000):\n",
-    "            newnew_df = new_df.drop(indices)\n",
-    "            return newnew_df\n",
-    "        \n",
-    "# ============================================================================================================================ #\n",
-    "\n",
-    "# ============================================== GRAFICOS ===================================================== #\n",
-    "\n",
-    "# Graficos de dispersion de los datos\n",
-    "def scattered(df, last_col, max_x=None, max_y=None):\n",
-    "    columns = df.columns.to_list()\n",
-    "    for item in columns[:last_col]:\n",
-    "        if max_x is None:\n",
-    "            max_x = df[item].index.max()\n",
-    "        if max_y is None:\n",
-    "            max_y = df[item].max()\n",
-    "        plt.xlabel('Index')\n",
-    "        plt.xlim(0, max_x)\n",
-    "        plt.ylim(0, max_y)\n",
-    "        plt.ylabel(f'Column \\'{item}\\'')\n",
-    "        plt.xticks(rotation=45, horizontalalignment='center')\n",
-    "        plt.minorticks_on()\n",
-    "        plt.grid()\n",
-    "        plt.title('PLOT PER COLUMN')\n",
-    "        plt.scatter(df.index, df[item], label=item.upper(), color='slateblue', marker='.')\n",
-    "        plt.legend()\n",
-    "        plt.show()\n",
-    "\n",
-    "# Graficos de distribucion (boxplot)\n",
-    "def boxplot(data_frame, last_col):\n",
-    "    columnas = data_frame.columns.to_list()\n",
-    "    fig, ax = plt.subplots(last_col, 1, figsize=(10, 20))\n",
-    "    fig.subplots_adjust(hspace=0.75)\n",
-    "    for i in range(last_col):\n",
-    "        sns.boxplot(x=data_frame[columnas[i]], data=data_frame, ax=ax[i])\n",
-    "    plt.show()\n",
-    "\n",
-    "# Histogramas de los datos\n",
-    "def histograms(df, last_col):\n",
-    "    new_df = df.copy()\n",
-    "    columns = new_df.columns.to_list()\n",
-    "    for item in columns[:last_col]:\n",
-    "        \n",
-    "        media = new_df[item].mean()\n",
-    "        desv_est = new_df[item].std()\n",
-    "        array = new_df[item].to_numpy()\n",
-    "\n",
-    "        plt.xlabel(f'Column \\'{item}\\'')\n",
-    "        plt.ylabel('Index')\n",
-    "        plt.xticks(rotation=45, horizontalalignment='center')\n",
-    "        plt.minorticks_on()\n",
-    "        plt.grid()\n",
-    "        plt.title('PLOT PER COLUMN')\n",
-    "\n",
-    "        cont, bins, patches = plt.hist(array, color='slateblue', edgecolor='black', density=True, alpha=0.6, label=item.upper())\n",
-    "        x_densidad = np.linspace(bins[0], bins[-1], 100)\n",
-    "\n",
-    "        funcion = 1/(desv_est*np.sqrt(2*np.pi)) * np.exp(-0.5*((x_densidad - media)/desv_est)**2)\n",
-    "\n",
-    "        plt.plot(x_densidad, funcion, linewidth=2, color='black')\n",
-    "        plt.legend()\n",
-    "        plt.show()\n",
-    "\n",
-    "# Matriz de correlacion\n",
-    "def matrix_corr(df):\n",
-    "    plt.figure(figsize=(10, 8))\n",
-    "    matriz_corr = df.corr()\n",
-    "    # Colores para la grafica de correlacion -> https://matplotlib.org/stable/users/explain/colors/colormaps.html\n",
-    "    sns.heatmap(matriz_corr, annot=True, cmap='inferno', linewidths=0.3, vmin=-1)\n",
-    "    plt.xticks(rotation=45, horizontalalignment='center')\n",
-    "    plt.title('Correlation Matrix')\n",
-    "    plt.show()\n",
-    "\n",
-    "# Pares de graficos en funciones del resto\n",
-    "def pplot(data_frame, hue):\n",
-    "    sns.pairplot(data_frame, hue=hue, corner=True, palette='plasma')\n",
-    "    plt.show()\n",
-    "\n",
-    "# Grafico del entrenamiento de la red (test/train)\n",
-    "def grafico_acc(L, train_l, test_l):\n",
-    "    fmt_train = {\n",
-    "        'color': 'tab:red',\n",
-    "        'ls': 'solid',\n",
-    "        'lw': 3,\n",
-    "    }\n",
-    "\n",
-    "    fmt_test = {\n",
-    "        'color': 'tab:orange',\n",
-    "        'ls': 'solid',\n",
-    "        'lw': 3,\n",
-    "    }\n",
-    "\n",
-    "    fig, (ax) = plt.subplots(1, 1, figsize=(10,8))\n",
-    "\n",
-    "    ax.plot(train_l, label='Train', **fmt_train)\n",
-    "    ax.plot(test_l, label='Test', **fmt_test)\n",
-    "\n",
-    "    ax.grid(which='both')\n",
-    "    ax.legend()\n",
-    "    ax.set_title(f'Accuracy {L=}')\n",
-    "    ax.set_xlabel('Step')\n",
-    "\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "# ============================================================================================================= #"
+    "df = pd.read_csv('./csvs/water_potability.csv', sep=',')"
    ]
   },
   {
@@ -431,6 +188,15 @@
    "outputs": [],
    "source": [
     "boxplot(df, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catplot(df, hue='Potability')"
    ]
   },
   {
