Jupyter notebook del CSV de Potabilidad

--- a/potability_Jupyter.ipynb
+++ b/potability_Jupyter.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattered(df, 1)"
+    "scattered(df, 9)"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catplot(df, hue='Potability')"
+    "catplot(df, last_col=4, hue='Potability')"
    ]
   },
   {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,11 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.describe())\n",
-    "scattered(df, 1)\n",
-    "boxplot(df, 9)\n",
-    "histograms(df, 1)\n",
-    "matrix_corr(df)"
+    "print(df.describe())"
    ]
   },
   {
@@ -328,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Y ahora si, probamos la _**Red**_"
+    "Y ahora si, entrenamos la _**Red**_"
    ]
   },
   {
