Jupyter Notebook, Potabilidad del Agua

--- a/potability_Jupyter.ipynb
+++ b/potability_Jupyter.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boxplot(df, 9)"
+    "boxplot(df, 9) # dejar en 9"
    ]
   },
   {
@@ -196,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catplot(df, last_col=4, hue='Potability')"
+    "catplot(df, last_col=9, hue='Potability')\n",
+    "# No prestar atencion al 'Passing 'palette' without...' si se hace eso el grafico no queda como quiero"
    ]
   },
   {
@@ -212,8 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aca se puede hacer que el eje y sea realmente el indice? osea, aparece hasta 0.25, no se si termino de entender bien que es eso <-\n",
-    "histograms(df, 3)"
+    "histograms(df, 9)"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = estandarizacion(df)"
+    "df = estandarizacion(df)[0]"
    ]
   },
   {
