Jupyter Notebook for the Fraud Transactions DataSet

--- a/fraud_Jupyter.ipynb
+++ b/fraud_Jupyter.ipynb
@@ -347,8 +347,8 @@
     "relu = lambda x: np.maximum(x, 0)\n",
     "sigmoide = lambda x: 1 / (1 + np.exp(-x))\n",
     "# =================================================\n",
-    "epochs = [10_000, 15_000, 20_000]\n",
-    "eles = [.01, .03]\n",
+    "epochs = [2500]\n",
+    "eles = [.03]\n",
     "for rep in epochs:\n",
     "    for ele in eles:\n",
     "        w_h, b_h, w_o, b_o = red_neuronal(L=ele, epochs=rep)"
