script file's name changed, so the import did too

--- a/fraud_Jupyter.ipynb
+++ b/fraud_Jupyter.ipynb
@@ -31,7 +31,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import math\n",
-    "from script_funciones import scattered, catplot, matrix_corr, pplot, \\\n",
+    "from functions_script import scattered, catplot, matrix_corr, pplot, \\\n",
     "    limpieza, estandarizacion, grafico_acc, boxplot, estandarizacion_muestras\n",
     "\n",
     "pd.set_option('display.width', 1000)\n",
@@ -402,7 +402,7 @@
     "Con esto podemos probar la Red. Se le puede pasar 7 valores random (teniendo en cuenta que los ultimos 3 son valores categoricos) Y ver la salida de la red. Se recomienda probar con las muestras de 'card_transdata.csv', ya que son muestras reales. La salida, deberia ser la misma que la del CSV. (Con el mismo accuracy que tengamos al entrenar la red. Si nosotros tuvimos un 97%, le va a pegar con esa frecuencia, si fue menos, va a ser menos.)\n",
     "Valores recomendados para el entrenamiento de la red:\n",
     "\n",
-    "Accuracy 97.4% => Step 0.03, epochs 3500\n",
+    "Accuracy 97.4% => Step 0.03, epochs 2500\n",
     "\n",
     "Accuracy 97.8% => Step 0.03, epochs 10000\n"
    ]
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
