--- a/potability_Jupyter.ipynb
+++ b/potability_Jupyter.ipynb
@@ -123,7 +123,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import math\n",
-    "from script_funciones import scattered, boxplot, catplot, histograms, matrix_corr, pplot, \\\n",
+    "from functions_script import scattered, boxplot, catplot, histograms, matrix_corr, pplot, \\\n",
     "    descarte, carga_nans, limpieza, estandarizacion, grafico_acc\n",
     "\n",
     "pd.set_option('display.width', 1000)\n",
